Test Page - Custom Colour Added
Functionality to set a custom colour has been added to the test app.

README changed to include mote dependency.

--- a/motetest.html
+++ b/motetest.html
@@ -7,7 +7,8 @@
 <head>
 
     <meta charset="utf-8">
-
+    
+    <!--Consider removing JQuery dependency for offline use.-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
     <title>Mote Test Application</title>
@@ -46,6 +47,34 @@
         function customSubmit()
         {
 
+            var chanarray = []
+
+            if($('#prech1:checked').val() != undefined) {chanarray.push(1)}
+            if($('#prech2:checked').val() != undefined) {chanarray.push(2)}
+            if($('#prech3:checked').val() != undefined) {chanarray.push(3)}
+            if($('#prech4:checked').val() != undefined) {chanarray.push(4)}
+
+            hex = $('#colour').val();
+            rgb = HEX2RGB(hex);
+
+            var moteData = {"MoteRequest":
+	            {"requesttype":"moteset",
+                "channels":chanarray,
+                "red":rgb[0],
+                "green":rgb[1],
+                "blue":rgb[2]
+	            }           
+            };
+
+            $.ajax(
+                {
+                    type: "POST",
+                    url: "http://127.0.0.1:5000/moteset/",
+                    dataType: "json",
+                    contentType: "application/json",
+                    data: JSON.stringify(moteData)
+                }
+            )
         }
 
         function turnOffMotes()
@@ -63,6 +92,64 @@
                     data: JSON.stringify(moteData)
                 }
             )
+        }
+
+        function HEX2RGB (hex) {
+
+            if (hex.charAt(0) === '#') {
+
+                hex = hex.substr(1);
+
+            }
+
+            if ((hex.length < 2) || (hex.length > 6)) {
+
+                return false;
+
+            }
+
+            var values = hex.split(''),
+
+                r,
+
+                g,
+
+                b;
+
+
+
+            if (hex.length === 2) {
+
+                r = parseInt(values[0].toString() + values[1].toString(), 16);
+
+                g = r;
+
+                b = r;
+
+            } else if (hex.length === 3) {
+
+                r = parseInt(values[0].toString() + values[0].toString(), 16);
+
+                g = parseInt(values[1].toString() + values[1].toString(), 16);
+
+                b = parseInt(values[2].toString() + values[2].toString(), 16);
+
+            } else if (hex.length === 6) {
+
+                r = parseInt(values[0].toString() + values[1].toString(), 16);
+
+                g = parseInt(values[2].toString() + values[3].toString(), 16);
+
+                b = parseInt(values[4].toString() + values[5].toString(), 16);
+
+            } else {
+
+                return false;
+
+            }
+
+            return [r, g, b];
+
         }
     
     </script>
@@ -100,8 +187,9 @@
     <button onclick="turnOffMotes()">Turn Off Lights</button>
     <hr>
     <p>Custom Colour:</p>
-    <p>TBC</p>
-
+    <input id="colour" type="color"/>
+    <br><br>
+    <button onclick="customSubmit()">Set Custom Colour</button>
 
 
 </body>
